samples/_failures_safe/1761517186_22fc2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a063d169.c: In function ‘main’:
./samples/SAFE/__tmp_a063d169.c:153:5: error: expected expression at end of input
  153 |     size_t num_events = sizeof(events) / sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_a063d169.c:153:5: error: expected declaration or statement at end of input
